[package]
name = "parse-cvs"
version = "0.1.0"
authors = ["William Mbotta <sergembotta@mailoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0.55"
mongodb = "0.9.2"
bson = "0.14.0"
chrono = "0.4"

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }